# bot

./: README.md  config.yaml  pyproject.toml
data/: state.db
data/lancedb/chunks.lance/_transactions/: 0-fab2a76a-a044-4ba5-8e59-a8467c5379c0.txn
frontend/: .gitignore  next.config.mjs  package.json
frontend/app/: globals.css  layout.tsx
frontend/components/: ChatInterface.tsx  ConfirmBar.tsx  MessageBubble.tsx  ModelPicker.tsx  SettingsModal.tsx  UiBlock.tsx
src/offline_rag/: chunker.py  cli.py  config.py  indexer.py  ollama_client.py  retrieval.py  server.py  store.py  watcher.py
src/offline_rag/agent/: __init__.py  loop.py  skills.py  tools.py
src/offline_rag/parsers/: __init__.py  code.py  docx.py  image.py  pdf.py  text.py
tests/: test_chunker.py  test_retrieval.py
